--- a/style/style.css
+++ b/style/style.css
@@ -83,8 +83,8 @@ header > p {
     padding-left: 10px;
     padding-right: 10px;
     margin: auto;
+    padding-bottom: 50px;
     text-align: center;
-    margin-bottom: 30px;
 }
 
 nav {
